--- a/public/css/style.css
+++ b/public/css/style.css
@@ -509,7 +509,7 @@
 .nav-left {
   width: 120px;
   height: 100%;
-  background: #2a2935;
+  background: #2b2929;
   box-shadow: inset -15px 0 15px -15px #222;
   float: left;
   position: relative;
@@ -591,7 +591,7 @@
 .nav-left ul {
   margin: 0;
   padding: 0;
-  font-size: 17px;
+  font-size: 15px;
   border-top: 1px solid #fff;
   list-style: none;
   overflow-y: auto;
@@ -607,7 +607,7 @@
 }
 .nav-left ul.sub li {
   line-height: 25px;
-  font-size: 14px;
+  font-size: 15px;
 }
 .nav-left ul.sub li:last-child {
   border-bottom: hidden;
