--- a/themes/3-hexo/source/css/style.styl
+++ b/themes/3-hexo/source/css/style.styl
@@ -133,5 +133,9 @@ img.pswp__img
     &:nth-child(1)
       margin-top 0
 
+.goodWords_class{
+  color: #fe5555;
+  font-weight: 700;
+}
 
 @import "mobile.styl"
