添加pulsar文章 添加mermaid配置

--- a/themes/3-hexo/layout/_partial/meta.ejs
+++ b/themes/3-hexo/layout/_partial/meta.ejs
@@ -32,3 +32,5 @@
 <script src="<%= theme.CDN.jquery_cookie %>" ></script>
 <%}%>
 <script src="<%=theme.blog_path?theme.blog_path.lastIndexOf("/") === theme.blog_path.length-1?theme.blog_path.slice(0, theme.blog_path.length-1):theme.blog_path:'' %>/js/iconfont.js?v=<%=theme.version%>" ></script>
+
+<script src="https://cdn.bootcdn.net/ajax/libs/mermaid/9.1.1/mermaid.js"></script>
