--- a/themes/3-hexo/layout/_partial/comments/gitalk.ejs
+++ b/themes/3-hexo/layout/_partial/comments/gitalk.ejs
@@ -1,6 +1,6 @@
 <div id="comments"></div>
 <link rel="stylesheet" href="https://unpkg.com/gitalk@1.7.2/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk@1.7.2/dist/gitalk.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/gitalk/1.7.2/gitalk.min.js"></script>
 
 
 <script type="text/javascript">
