--- a/themes/3-hexo/layout/_partial/comments/gitalk.ejs
+++ b/themes/3-hexo/layout/_partial/comments/gitalk.ejs
@@ -4,16 +4,18 @@
 
 
 <script type="text/javascript">
-    var gitalk = new Gitalk({
-        clientID: '<%=theme.gitalk.ClientID %>',
-        clientSecret: '<%=theme.gitalk.ClientSecret %>',
-        repo: '<%=theme.gitalk.repo %>',
-        owner: '<%=theme.gitalk.githubID %>',
-        admin: ['<%=theme.gitalk.adminUser %>'],
-        id: decodeURI('<%=theme.gitalk.id %>'),
-        distractionFreeMode: '<%=theme.gitalk.distractionFreeMode %>',
-        language: '<%=theme.gitalk.language %>',
-        perPage: parseInt('<%=theme.gitalk.perPage %>',10)
+    $.getScript('/js/gitalk.js', function () {
+        var gitalk = new Gitalk({
+            clientID: '<%=theme.gitalk.ClientID %>',
+            clientSecret: '<%=theme.gitalk.ClientSecret %>',
+            repo: '<%=theme.gitalk.repo %>',
+            owner: '<%=theme.gitalk.githubID %>',
+            admin: ['<%=theme.gitalk.adminUser %>'],
+            id: decodeURI('<%=theme.gitalk.id %>'),
+            distractionFreeMode: '<%=theme.gitalk.distractionFreeMode %>',
+            language: '<%=theme.gitalk.language %>',
+            perPage: parseInt('<%=theme.gitalk.perPage %>',10)
+        })
+        gitalk.render('comments')
     })
-    gitalk.render('comments')
 </script>
